--- a/less/index.less
+++ b/less/index.less
@@ -1,5 +1,5 @@
 // Import your less files here:
-@import "variable.less";
+@import "variables.less";
 @import "mixins.less";
 @import "reset.less";
 @import "global.less";
