--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,4 +1,17 @@
-// Home Content
+.title {
+  h1 {
+    text-align: center;
+    .fsize(3.6rem);
+  }
+}
+
+.headerIMG {
+  width: 100%;
+  .flex(center);
+  img {
+    width: 96%;
+  }
+}
 
 .home {
 
@@ -11,7 +24,7 @@
     p {
       padding:0 15px;
     }
-  
+
   }
 
   .space-images {
@@ -64,7 +77,7 @@
     .walk-img {
       width: 46%;
       margin-left: 4%;
-      
+
       img {
         width: 100%;
         height: auto;
