--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,11 @@
-// Navigation code here
+
+.spaceNAV {
+  .flex(center);
+  a {
+    padding: 2%;
+    text-decoration: none;
+    font-family: 'Russo One', sans-serif;
+    color: @header-font-color;
+    .fsize(1.6rem);
+  }
+}
