--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,11 +1,12 @@
 
 .spaceNAV {
+  width: 100%;
   .flex(center);
   a {
     padding: 2%;
     text-decoration: none;
-    font-family: 'Russo One', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     color: @header-font-color;
-    .fsize(1.6rem);
+    .fsize(1.8rem);
   }
 }
