--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,8 +5,7 @@
   a {
     padding: 2%;
     text-decoration: none;
-    font-family: 'Ubuntu', sans-serif;
     color: @header-font-color;
-    .fsize(1.8rem);
+    .font(@font, 1.8rem);
   }
 }
