--- a/less/variables.less
+++ b/less/variables.less
@@ -1,5 +1,5 @@
-
-
+@font: 'Ubuntu', sans-serif;
+@hfont: 'Russo One', sans-serif;
 // Color pointers
 @nav-bg: @wild-sand;
 @nav-font: @river-bend;
