--- a/less/mixins.less
+++ b/less/mixins.less
@@ -4,6 +4,12 @@
   justify-content: @justify;
 }
 
-.fsize (@rem) {
+.button(@bcolor, @tcolor,@radius) {
+  background-color: @bcolor;
+  color: @tcolor;
+  border-radius: @radius;
+}
+.font(@ftype, @rem) {
+  font-family: @ftype;
   font-size: @rem;
 }
