--- a/less/variables.less
+++ b/less/variables.less
@@ -1,5 +1,11 @@
+// fonts
 @font: 'Ubuntu', sans-serif;
 @hfont: 'Russo One', sans-serif;
+
+// media
+@phone: ~"(max-width: 500px)";
+
+
 // Color pointers
 @nav-bg: @wild-sand;
 @nav-font: @river-bend;
