--- a/css/index.css
+++ b/css/index.css
@@ -194,6 +194,7 @@ footer {
 }
 .headerIMG img {
   width: 96%;
+  border-radius: 10px;
 }
 .home .intro h2 {
   padding: 15px;
@@ -211,6 +212,20 @@ footer {
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
+}
+@media (max-width: 500px) {
+  .home .space-images {
+    display: flex;
+    align-items: center;
+    flex-flow: column wrap;
+  }
+  .home .space-images img {
+    width: 96%;
+  }
+  .home .space-images .sky,
+  .home .space-images .launch {
+    display: none;
+  }
 }
 .home .visit-planets {
   padding: 15px;
@@ -260,4 +275,27 @@ footer {
   width: 100%;
   height: auto;
   border-radius: 10px;
+}
+@media (max-width: 500px) {
+  .home .walk {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-flow: column-reverse wrap;
+  }
+  .home .walk .walk-img {
+    width: 96%;
+    margin: 0;
+  }
+  .home .walk .walk-text {
+    width: 94%;
+    margin: 4%;
+  }
+  .home .walk .walk-text .btn button {
+    width: 100%;
+    height: 7rem;
+    font-size: 2rem;
+  }
 }
