--- a/less/home-page.less
+++ b/less/home-page.less
@@ -10,6 +10,7 @@
   .flex(center);
   img {
     width: 96%;
+    border-radius: 10px;
   }
 }
 
@@ -37,6 +38,17 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+    }
+    @media @phone {
+      display: flex;
+      align-items: center;
+      flex-flow: column wrap;
+      img {
+        width: 96%;
+      }
+      .sky, .launch {
+        display: none;
+      }
     }
   }
 
@@ -96,6 +108,30 @@
         width: 100%;
         height: auto;
         border-radius: 10px;
+      }
+    }
+    @media @phone {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      flex-flow: column-reverse wrap;
+      .walk-img {
+        width: 96%;
+        margin: 0;
+      }
+      .walk-text {
+        width: 94%;
+        margin: 4%;
+        .btn {
+          button {
+            width: 100%;
+            height: 7.0rem;
+            font-size: 2.0rem;
+          }
+
+        }
       }
     }
   }
